<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Papercraft</string>
    <string name="menu_item_toggle_global">Toggle global mode</string>
    <string name="menu_item_switch">Tunnel</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_exit">Exit</string>
    <string name="config_url">Config URL</string>
    <string name="config_not_set_value">Not set</string>
    <string name="select_app">Select App:</string>
    <string name="select_app_detail">No</string>
    <string name="proxied_apps">Per-App Proxy</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_more">More&#8230;</string>
    <string name="vpn_connected_status">connected</string>
    <string name="vpn_disconnected_status">disconnected</string>
    <string name="about_info">Papercraft-android is written by liComm. It is lightweight and saves battery.</string>
    <string name="exit_confirm_info">This will close the tunnel connection, Are you sure to exit?</string>
    <string name="err_invalid_url">The config URL is invalid.</string>
    <string name="config_url_hint">ss://method:password@host:port</string>
    <string name="label_host">Host:</string>
    <string name="label_port">Port:</string>
    <string name="label_password">Password:</string>
    <string name="label_method">Method:</string>
    <string name="notification_running">Papercraft is running</string>
    <string name="notification_click_enter">Click to Enter</string>
</resources>
